turned dto and projections into dto internal/external, added tests, implemented get-scenarios