@@ -1,11 +1,13 @@
 package com.geeksforless.client.mapper;
 
 import com.geeksforless.client.model.Scenario;
-import com.geeksforless.client.model.dto.ScenarioDto;
+import com.geeksforless.client.model.dto.ScenarioDtoExternal;
+import com.geeksforless.client.model.dto.ScenarioDtoInternal;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ScenarioMapper {
@@ -16,9 +18,9 @@ public class ScenarioMapper {
         this.stepMapper = stepMapper;
     }
 
-    public ScenarioDto toDto(Scenario scenario) {
+    public ScenarioDtoExternal toDtoExternal(Scenario scenario) {
 
-        ScenarioDto scenarioDto = new ScenarioDto();
+        ScenarioDtoExternal scenarioDto = new ScenarioDtoExternal();
 
         scenarioDto.setName(scenario.getName());
         scenarioDto.setSite(scenario.getSite());
@@ -27,14 +29,33 @@ public class ScenarioMapper {
                 Optional.ofNullable(scenario.getSteps())
                         .orElse(new ArrayList<>())
                         .stream()
-                        .map(stepMapper::toDto)
-                        .toList()
+                        .map(stepMapper::toDtoExternal)
+                        .collect(Collectors.toList())
         );
 
         return scenarioDto;
     }
 
-    public Scenario toScenario(ScenarioDto scenarioDto) {
+    public ScenarioDtoInternal toDtoInternal(Scenario scenario) {
+
+        ScenarioDtoInternal scenarioDto = new ScenarioDtoInternal();
+
+        scenarioDto.setId(scenario.getId());
+        scenarioDto.setName(scenario.getName());
+        scenarioDto.setSite(scenario.getSite());
+        scenarioDto.setResult(scenario.getResult());
+        scenarioDto.setSteps(
+                Optional.ofNullable(scenario.getSteps())
+                        .orElse(new ArrayList<>())
+                        .stream()
+                        .map(stepMapper::toDtoInternal)
+                        .collect(Collectors.toList())
+        );
+
+        return scenarioDto;
+    }
+
+    public Scenario toScenario(ScenarioDtoExternal scenarioDto) {
         Scenario scenario = new Scenario();
         scenario.setName(scenarioDto.getName());
         scenario.setSite(scenarioDto.getSite());
@@ -44,7 +65,25 @@ public class ScenarioMapper {
                         .orElse(new ArrayList<>())
                         .stream()
                         .map(stepMapper::toStep)
-                        .toList()
+                        .collect(Collectors.toList())
+        );
+        return scenario;
+
+    }
+
+    public Scenario toScenario(ScenarioDtoInternal scenarioDto) {
+
+        Scenario scenario = new Scenario();
+        scenario.setId(scenarioDto.getId());
+        scenario.setName(scenarioDto.getName());
+        scenario.setSite(scenarioDto.getSite());
+        scenario.setResult(scenarioDto.getResult());
+        scenario.setSteps(
+                Optional.ofNullable(scenarioDto.getSteps())
+                        .orElse(new ArrayList<>())
+                        .stream()
+                        .map(stepMapper::toStep)
+                        .collect(Collectors.toList())
         );
         return scenario;
 
